v5.9.0/python/_sources/paraview.simple.TemporalInterpolator.rst.txt
paraview.simple.TemporalInterpolator
====================================

.. currentmodule:: paraview.simple

.. autofunction:: TemporalInterpolator

Data Descriptors
----------------


   
   DiscreteTimeStepInterval
       If Discrete Time Step Interval is set to 0, then the
       Temporal Interpolator will provide a continuous region of time on its
       output. If set to anything else, then the output will define a finite
       set of time points on its output, each spaced by the Discrete Time Step
       Interval. The output will have (time range)/(discrete time step
       interval) time steps. (Note that the time range is defined by the time
       range of the data of the input filter, which may be different from
       other pipeline objects or the range defined in the animation
       inspector.) This is a useful option to use if you have a dataset with
       one missing time step and wish to 'fill in' the missing data with an
       interpolated value from the steps on either side.
   
   Input
       This property specifies the input of the Temporal
       Interpolator.
   
   ResampleFactor
       When ResampleFactor is a non zero positive integer, each pair
       of input time steps will be interpolated between with the number
       of steps specified. For example an input of 1,2,3,4,5 and a resample factor
       of 10, will produce steps 0f 1.0, 1.1, 1.2, ..., 1.9, 2.0.
       Irregular input steps will produce irregular output steps.
       Resample factor will only be used if DiscreteTimeStepInterval is zero,
       otherwise the DiscreteTimeStepInterval takes precedence
   
   TimestepValues
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`